Fix compare map on mobile

--- a/src/styles/components/_compare.scss
+++ b/src/styles/components/_compare.scss
@@ -78,10 +78,17 @@
   }
 }
 .compareitem-map {
-  height: 430px;
+  @include only-mobile {
+    height: calc(100vh - 176px);
+  }
+  @include only-desktop {
+    height: 430px;
+  }
   position: relative;
   .comparelist-item:first-child & {
-    border-right: 3px solid #F5F1E0;
+    @include only-desktop {
+      border-right: 3px solid #F5F1E0;
+    }
   }
 }
 .compareitem-widgets {
@@ -115,6 +122,7 @@
   @include only-mobile {
     flex-grow: 1;
     overflow-y: auto;
+    height: 100%;
     padding-bottom: 64px;
   }
 }
