--- a/src/styles/components/_filters.scss
+++ b/src/styles/components/_filters.scss
@@ -98,7 +98,6 @@
 /* Mobile */
 .c-mobile-filters {
   &.-compare {
-    transform: translateY(calc(100% - 169px));
     &.-opened {
     }
   }
@@ -107,7 +106,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  transform: translateY(calc(100% - 61px));
+  transform: translateY(calc(100% - 64px));
   transition: transform $ease-out-cubic $animation-time;
   position: fixed;
   z-index: 9999;
